Now used fixed height to align comment box

--- a/frontend/db-pcr-frontend/src/app/review/diff-table/diff-table.component.css
+++ b/frontend/db-pcr-frontend/src/app/review/diff-table/diff-table.component.css
@@ -51,3 +51,10 @@
   background-color: #f9f9f9;
   padding: 4px;
 }
+
+.comment-placeholder td {
+  height: 1.5em;
+  padding: 21px;
+  background: transparent;
+  visibility: hidden;
+}
